--- a/resources/html/routes/home.html
+++ b/resources/html/routes/home.html
@@ -3,14 +3,9 @@
 {{ end }}
 
 {{ define "content" }}
-    <h1>
-        <i class="fa fa-fw fa-home"></i>
-        &nbsp;
-        {{ block "title" . }}{{ end }}
-    </h1>
-    <div class="alert alert-success">
-        <i class="fa fa-check-circle"></i>
-        &nbsp;
-        ...coming soon...
+    <div id="root">
+        <p class="text-center">
+            <i class="fa fa-2x fa-cog fa-spin"></i>
+        </p>
     </div>
 {{ end }}
