--- a/resources/html/layout.html
+++ b/resources/html/layout.html
@@ -25,7 +25,7 @@
                 >
             <title>{{ template "title" . }} - Torrents</title>
         </head>
-        <body data-url="{{ $.settings.Others.URL }}/">
+        <body data-url="{{ $.settings.Others.URL }}">
             <nav class="navbar navbar-inverse">
                 <div class="container">
                     <div class="navbar-header">
